Fix: Chevron of Menu Profile is not horizontally aligned when menu mode is reveal (#26)

--- a/src/assets/layout/styles/layout/_menuprofile.scss
+++ b/src/assets/layout/styles/layout/_menuprofile.scss
@@ -29,7 +29,7 @@
         display: flex;
         width: 100%;
         align-items: center;
-        padding: 0.5rem 1rem;
+        padding: 0.5rem 1.5rem;
         color: var(--menuitem-text-color);
         transition: background-color var(--transition-duration);
 
